mds: fix and skip submitting invalid osd request

When the first dentry have enough metadata and the size is larger
than max_write_size, it may submitting one invalid osd request to
Rados, which will cause the cephfs to be readonly.

Fixes: https://tracker.ceph.com/issues/58082
Signed-off-by: Xiubo Li <xiubli@redhat.com>